--- a/AlgorithmBattleArena/appsettings.json
+++ b/AlgorithmBattleArena/appsettings.json
@@ -1,6 +1,6 @@
 {
   "ConnectionStrings": {
-        "DefaultConnection": "Server=localhost;Database=AlgorithmBattleArina;TrustServerCertificate=true;User Id=sa;Password=SQLConnect1!;"
+        "DefaultConnection": "Server=tcp:aba-db-azure.database.windows.net,1433;Initial Catalog=AlgorithmBattleArena;Persist Security Info=False;User ID=azadmin;Password={YouPassowrd};MultipleActiveResultSets=False;Encrypt=True;TrustServerCertificate=False;Connection Timeout=30;"
     },
   "Logging": {
     "LogLevel": {
