Implement Lobby Backend and Testing

--- a/AlgorithmBattleArena/appsettings.json
+++ b/AlgorithmBattleArena/appsettings.json
@@ -5,5 +5,8 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "Jwt": {
+    "Secret": "supersecret_test_key_12345678901234567890"
+  }
 }
