--- a/.github/workflows/dev_algorithmbattlearena.yml
+++ b/.github/workflows/dev_algorithmbattlearena.yml
@@ -13,7 +13,7 @@ jobs:
   build:
     runs-on: ubuntu-latest
     permissions:
-      contents: read #This is required for actions/checkout
+      contents: read # required for actions/checkout
 
     steps:
       - uses: actions/checkout@v4
@@ -23,8 +23,20 @@ jobs:
         with:
           dotnet-version: '8.x'
 
+      - name: Restore dependencies   # ✅ New: ensures all NuGet packages are restored before build
+        run: dotnet restore
+
       - name: Build with dotnet
-        run: dotnet build --configuration Release
+        run: dotnet build --configuration Release --no-restore  # ✅ New: skip restore here since already done
+
+      - name: Run unit tests   # ✅ New: runs all test projects and generates test result files
+        run: dotnet test --configuration Release --no-build --logger "trx;LogFileName=test_results.trx" --results-directory ./TestResults
+
+      - name: Upload test results   # ✅ New: saves test results so you can download/view in GitHub Actions UI
+        uses: actions/upload-artifact@v4
+        with:
+          name: test-results
+          path: ./TestResults
 
       - name: dotnet publish
         run: dotnet publish -c Release -o ${{env.DOTNET_ROOT}}/myapp
@@ -37,8 +49,8 @@ jobs:
 
   deploy:
     runs-on: ubuntu-latest
-    needs: build
-    
+    needs: build   # ✅ New: ensures deployment only runs if build + tests succeed
+
     steps:
       - name: Download artifact from build job
         uses: actions/download-artifact@v4
