--- a/AlgorithmBattleArenaFrontend/package.json
+++ b/AlgorithmBattleArenaFrontend/package.json
@@ -12,24 +12,29 @@
   },
   "dependencies": {
     "@microsoft/signalr": "^7.0.0",
+    "axios": "^1.11.0",
+    "dayjs": "^1.11.9",
     "jwt-decode": "^3.1.2",
+    "lucide-react": "^0.544.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "react-router-dom": "^6.14.1",
-    "dayjs": "^1.11.9"
+    "react-router-dom": "^6.14.1"
   },
   "devDependencies": {
     "@eslint/js": "^9.33.0",
+    "@testing-library/react": "14.0.0",
     "@types/react": "^19.1.10",
     "@types/react-dom": "^19.1.7",
     "@vitejs/plugin-react": "^5.0.0",
-    "vitest": "1.5.1",
-    "@testing-library/react": "14.0.0",
-    "msw": "1.2.1",
+    "autoprefixer": "^10.4.21",
     "eslint": "^9.33.0",
     "eslint-plugin-react-hooks": "^5.2.0",
     "eslint-plugin-react-refresh": "^0.4.20",
     "globals": "^16.3.0",
-    "vite": "^7.1.2"
+    "msw": "1.2.1",
+    "postcss": "^8.5.6",
+    "tailwindcss": "^3.4.0",
+    "vite": "^7.1.2",
+    "vitest": "1.5.1"
   }
 }
