--- a/AlgorithmBattleArena/appsettings.Development.json
+++ b/AlgorithmBattleArena/appsettings.Development.json
@@ -1,6 +1,6 @@
 {
   "ConnectionStrings": {
-    "DefaultConnection": "Server=tcp:aba-db-azure.database.windows.net,1433;Initial Catalog=AlgorithmBattleArena;Persist Security Info=False;User ID=azadmin;Password=${{SQLDB_PASSWORD}};MultipleActiveResultSets=False;Encrypt=True;TrustServerCertificate=False;Connection Timeout=30;"
+    "DefaultConnection": "Server=tcp:aba-db-azure.database.windows.net,1433;Initial Catalog=AlgorithmBattleArena;Persist Security Info=False;User ID=azadmin;Password=abaDB123;MultipleActiveResultSets=False;Encrypt=True;TrustServerCertificate=False;Connection Timeout=30;"
   },
   "Logging": {
     "LogLevel": {
