Finished Role based Acess Control

--- a/AlgorithmBattleArena/appsettings.json
+++ b/AlgorithmBattleArena/appsettings.json
@@ -11,8 +11,8 @@
   "AllowedHosts": "*",
   "AppSettings":{
     "TokenKey": "",
-    "PasswordKey": ""
-    
-     
+    "PasswordKey": "",
+    "AdminEmail": "",
+    "AdminPassword": ""
   }
 }
