--- a/.github/workflows/dev_algorithmbattlearena.yml
+++ b/.github/workflows/dev_algorithmbattlearena.yml
@@ -21,6 +21,15 @@ jobs:
         with:
           dotnet-version: '8.x'
 
+      - name: Create .env file from GitHub Secrets
+        run: |
+          echo "DefaultConnection=${{ secrets.DEFAULT_CONNECTION }}" >> .env
+          echo "TokenKey=${{ secrets.TOKEN_KEY }}" >> .env
+          echo "PasswordKey=${{ secrets.PASSWORD_KEY }}" >> .env
+          echo "AdminEmail=${{ secrets.ADMIN_EMAIL }}" >> .env
+          echo "AdminPassword=${{ secrets.ADMIN_PASSWORD }}" >> .env
+        shell: bash
+
       - name: Restore dependencies
         run: dotnet restore
 
@@ -43,7 +52,7 @@ jobs:
           path: ./TestResults
 
       - name: Publish app
-        if: github.ref == 'refs/heads/main'   # ✅ only publish on main
+        if: github.ref == 'refs/heads/main'
         run: dotnet publish -c Release -o ${{env.DOTNET_ROOT}}/myapp
 
       - name: Upload artifact for deployment
@@ -56,13 +65,16 @@ jobs:
   deploy:
     runs-on: ubuntu-latest
     needs: build-and-test
-    if: github.ref == 'refs/heads/main'   # ✅ only deploy on main
+    if: github.ref == 'refs/heads/main'
 
     steps:
       - name: Download artifact
         uses: actions/download-artifact@v4
         with:
           name: .net-app
+
+      - name: Ensure .env is not deployed
+        run: rm -f .env
 
       - name: Deploy to Azure Web App
         uses: azure/webapps-deploy@v3
