--- a/AlgorithmBattleArena/appsettings.json
+++ b/AlgorithmBattleArena/appsettings.json
@@ -1,6 +1,6 @@
 {
   "ConnectionStrings": {
-    "DefaultConnection": "Server=tcp:aba-db-azure.database.windows.net,1433;Initial Catalog=AlgorithmBattleArena;Persist Security Info=False;User ID=azadmin;Password=abaDB123;MultipleActiveResultSets=False;Encrypt=True;TrustServerCertificate=False;Connection Timeout=30;"
+    "DefaultConnection": ""
   },
   "Logging": {
     "LogLevel": {
@@ -8,11 +8,11 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
-
   "AllowedHosts": "*",
-  "AppSettings":{
+  "AppSettings": {
     "TokenKey": "",
     "PasswordKey": "",
     "AdminEmail": "",
     "AdminPassword": ""
+  }
 }
