--- a/.github/workflows/dev_algorithmbattlearena.yml
+++ b/.github/workflows/dev_algorithmbattlearena.yml
@@ -21,25 +21,16 @@ jobs:
         with:
           dotnet-version: '8.x'
 
-      - name: Create .env file from GitHub Secrets
-        run: |
-          echo "DefaultConnection=${{ secrets.DEFAULT_CONNECTION }}" >> .env
-          echo "TokenKey=${{ secrets.TOKEN_KEY }}" >> .env
-          echo "PasswordKey=${{ secrets.PASSWORD_KEY }}" >> .env
-          echo "AdminEmail=${{ secrets.ADMIN_EMAIL }}" >> .env
-          echo "AdminPassword=${{ secrets.ADMIN_PASSWORD }}" >> .env
-        shell: bash
-
       - name: Restore dependencies
         run: dotnet restore
 
       - name: Build project
         run: dotnet build --configuration Release --no-restore
 
+      - name: Copy appsettings.test.json
+        run: cp AlgorithmBattleArena.Tests/appsettings.test.json AlgorithmBattleArena.Tests/bin/Release/net8.0/
+
       - name: Run unit tests
-        env:
-          PASSWORD_KEY: ${{ secrets.PASSWORD_KEY }}
-          TOKEN_KEY: ${{ secrets.TOKEN_KEY }}
         run: |
           mkdir -p ./TestResults
           dotnet test AlgorithmBattleArena.Tests/AlgorithmBattleArena.Tests.csproj \
@@ -75,9 +66,6 @@ jobs:
         uses: actions/download-artifact@v4
         with:
           name: .net-app
-
-      - name: Ensure .env is not deployed
-        run: rm -f .env
 
       - name: Deploy to Azure Web App
         uses: azure/webapps-deploy@v3
