--- a/AlgorithmBattleArenaFrontend/package.json
+++ b/AlgorithmBattleArenaFrontend/package.json
@@ -12,6 +12,7 @@
   },
   "dependencies": {
     "@microsoft/signalr": "^7.0.0",
+    "@monaco-editor/react": "^4.7.0",
     "axios": "^1.11.0",
     "dayjs": "^1.11.9",
     "jwt-decode": "^3.1.2",
