--- a/.github/workflows/dev_algorithmbattlearena.yml
+++ b/.github/workflows/dev_algorithmbattlearena.yml
@@ -50,7 +50,7 @@ jobs:
       # Publish ONLY the web app
       - name: Publish app
         if: github.ref == 'refs/heads/main'
-        run: dotnet publish AlgorithmBattleArena/AlgorithmBattleArena.csproj -c Release -o ./publish
+        run: dotnet publish AlgorithmBattleArena/AlgorithmBattleArena.csproj -c Release -o ${{env.DOTNET_ROOT}}/myapp
 
       # Upload ONLY the publish folder
       - name: Upload artifact for deployment
@@ -58,7 +58,7 @@ jobs:
         uses: actions/upload-artifact@v4
         with:
           name: published-app
-          path: ./publish
+          path: ${{env.DOTNET_ROOT}}/myapp
 
   deploy:
     runs-on: ubuntu-latest
@@ -70,12 +70,12 @@ jobs:
         uses: actions/download-artifact@v4
         with:
           name: published-app
-          path: ./publish
+          path: ${{env.DOTNET_ROOT}}/myapp
 
       - name: Deploy to Azure Web App
         uses: azure/webapps-deploy@v3
         with:
           app-name: 'AlgorithmBattleArena'
           slot-name: 'Production'
-          package: ./publish
+          package: ${{env.DOTNET_ROOT}}/myapp
           publish-profile: ${{ secrets.AZUREAPPSERVICE_PUBLISHPROFILE_BD81C951B4754D6ABD5FD7AE9379497A }}
