--- a/AlgorithmBattleArenaFrontend/package.json
+++ b/AlgorithmBattleArenaFrontend/package.json
@@ -28,7 +28,7 @@
     "@testing-library/react": "14.0.0",
     "@types/react": "^19.1.10",
     "@types/react-dom": "^19.1.7",
-    "@vitejs/plugin-react": "^5.0.4",
+    "@vitejs/plugin-react": "^4.3.4",
     "autoprefixer": "^10.4.21",
     "eslint": "^9.33.0",
     "eslint-plugin-react-hooks": "^5.2.0",
@@ -37,7 +37,10 @@
     "msw": "^2.11.4",
     "postcss": "^8.5.6",
     "tailwindcss": "^3.4.0",
-    "vite": "^7.1.9",
-    "vitest": "^3.2.4"
+    "vite": "^5.4.11",
+    "vitest": "^1.6.0"
+  },
+  "engines": {
+    "node": ">=18.0.0"
   }
 }
