--- a/AlgorithmBattleArena/.env.example
+++ b/AlgorithmBattleArena/.env.example
@@ -3,3 +3,4 @@ TokenKey=your_jwt_secret_key_here
 PasswordKey=your_password_encryption_key_here
 AdminEmail=your_admin_email@example.com
 AdminPassword=your_admin_password
+PENAI_API_KEY=your_openai_api_key_here
